# clean_python

./: README.md  pyproject.toml  test_environment.py
clean_python/session1/comments/: overcommented.py
clean_python/session1/functions/genetic_tsp_clean/: genTSP.py  genTSP_gui.py
clean_python/session1/functions/genetic_tsp_dirty/: genTSP.py  genTSP_gui.py
clean_python/session1/names/: starbucks_analysis.py
clean_python/session2/fewer_classes/solutions/: no_state.py
clean_python/session2/haunted_code/: haunted.py
clean_python/session2/more_classes/: composition.py  inheritance.py
clean_python/session2/solid/: lsp.py  ocp.py  srp.py
clean_python/session2/solid/solutions/: lsp.py  (+2 more)
clean_python/session2/structure/: config.py  main.py  test_utils.py
clean_python/session3/blunders/: fixme.py  fixme_solution.py
clean_python/session3/neat_tricks/: solveme.py  solveme_solution.py
clean_python/session3/pythonic/: fixme.py  fixme_solution.py  inputdata.csv
session1/comments/: overcommented_clean.py
session1/functions/genetic_tsp_clean/: genTSP_gui.py
session1/functions/genetic_tsp_dirty/: genTSP_gui.py
session1/names/: starbucks_analysis_clean.py
session1/names/data/: starbucks-menu-nutrition-drinks.csv
session2/fewer_classes/: datastructure.py  no_state.py
session2/fewer_classes/solutions/: datastructure.py
session2/more_classes/: state.py
session2/more_classes/solutions/: composition.py  inheritance.py
session2/structure/: __init__.py  main.py  statistics.py  test_utils.py  wikipedia_scraper.py
session2/structure/_solution/: main.py
(+7 files in other folders)
