[tool.poetry]
name = "clean_python"
version = "0.1.0"
description = "Code examples for the Accenture clean python workshop"
authors = ["georg.aschl"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
requests = "^2.32.3"
html2text = "^2024.2.26"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
